package com.synxo.domain.enums;

public enum MatchingMode {
	RECOMMENDATION,
	PROXIMITY
}
